minor content update

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ permalink:   date
 maruku:
   use_tex:    false
   use_divs:   false
-  png_engine: blahtex
+  png_engine: latex
   png_dir:    images/latex
   png_url:    /images/latex
 
