--- a/_config.yml
+++ b/_config.yml
@@ -22,15 +22,8 @@ plugins:     ./_plugins
 future:      true
 lsi:         false
 pygments:    false
-markdown:    maruku
+markdown:    kramdown
 permalink:   date
-
-maruku:
-  use_tex:    false
-  use_divs:   false
-  png_engine: latex
-  png_dir:    images/latex
-  png_url:    /images/latex
 
 rdiscount:
   extensions: []
